[package]
name = "block_delivery_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
hyper = "1"
tokio = { version = "1", features = ["full"] }

# Solana / Anchor
anchor-lang = "0.32.1"
solana-client = "1.18"
solana-sdk = "1.18"

# utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
sha2 = "0.10.9"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"
